--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>CGI DRE</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" type="image/png" href="./media/cgi_dre-logo.jpg">
         <link rel="stylesheet" href="stylesheet.css">
        
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
