--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <div class="sidebar">
         <div class="logo">
-            <a href="index.html"><img src="./media/cgi_dre-logo.svg"></a>
+            <a href="index.html"><img src="./media/cgi_dre-logo.png"></a>
         </div>
         <div class="sidebar-menu">
         <ul class="menu">
