add scroll up elements

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
         </ul>
         </div>
         </div>
+
+	<div class="scroll"><a href="#posts"><img src="./media/scroll-up.png"></a></div>
         
         <div class="row" id="posts"> 
             <div class="column">
