remove link tags from sidebar

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         </div>
         <div class="sidebar-menu">
         <ul class="menu">
-            <li><a href="#posts">Websites</a></li>
-            <li><a href="#posts">Graphics</a></li>
-            <li><a href="#posts">3D Modeling</a></li>
-            <li><a href="#posts">E-commerce</a></li>
+            <li>Websites</li>
+            <li>Graphics</li>
+            <li>3D Modeling</li>
+            <li>E-commerce</li>
         </ul>
         </div>
         </div>
