change video src

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         <!-- BACKGROUND VIDEO -->
 
         <video autoplay loop id="video-background" muted plays-inline>
-            <source src="https://raw.githack.com/awortham33/awortham33.github.io/master/media/v1.mov" type="video/mp4">
-		<!-- <source src="./media/v1.mov" type="video/mp4">-->
+            <!--<source src="https://raw.githack.com/awortham33/awortham33.github.io/master/media/v1.mov" type="video/mp4">-->
+		<source src="./media/v2.mp4" type="video/mp4">
         </video>
 
         <!-- END BACKGROUND VIDEO -->
