add links to visuals and home

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
             <li>Graphics</li>
             <li>3D Modeling</li>
             <li>E-commerce</li>
+<br>
+            <li><a href="visuals.html">Visuals</a></li>
         </ul>
         </div>
         </div>
