--- a/visuals.html
+++ b/visuals.html
@@ -23,6 +23,8 @@
             <li>Graphics</li>
             <li>3D Modeling</li>
             <li>E-commerce</li>
+<br>
+            <li><a href="index.html">Home</a></li>
         </ul>
         </div>
         </div>
