update visual links to raw git

--- a/visuals.html
+++ b/visuals.html
@@ -34,7 +34,7 @@
             <div class="media_area">
                 <div class="media2">
                     <video autoplay loop id="video-display" muted plays-inline>
-                        <source src="./media/v4.mp4" type="video/mp4">
+                        <source src="https://raw.githack.com/awortham33/awortham33.github.io/master/media/v4.mp4" type="video/mp4">
                     </video>
                 </div>
             </div>
@@ -44,7 +44,7 @@
             <div class="media_area">
                 <div class="media2">
                     <video autoplay loop id="video-display" muted plays-inline>
-                        <source src="./media/v3.mp4" type="video/mp4">
+                        <source src="https://raw.githack.com/awortham33/awortham33.github.io/master/media/v3.mp4" type="video/mp4">
                     </video>
                 </div>
             </div>
@@ -54,7 +54,7 @@
             <div class="media_area">
                 <div class="media2">
                     <video autoplay loop id="video-display" muted plays-inline>
-                        <source src="./media/v5.mp4" type="video/mp4">
+                        <source src="https://raw.githack.com/awortham33/awortham33.github.io/master/media/v5.mp4" type="video/mp4">
                     </video>
                 </div>
             </div>
