"visuals" to "my visuals"

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	    <li>Websites</li>
             <li>E-commerce</li>
 <br>
-            <li><a href="visuals.html">Visuals</a></li>
+            <li><a href="visuals.html">My Visuals</a></li>
         </ul>
         </div>
         </div>
