add virtual link to pages

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <li>E-commerce</li>
 <br>
             <li><a href="visuals.html">My Visuals</a></li>
+            <li><a href="virtual.html">Virtual</a></li>
         </ul>
         </div>
         </div>
