--- a/visuals.html
+++ b/visuals.html
@@ -34,6 +34,7 @@
             <li>E-commerce</li>
 <br>
             <li><a href="index.html">Home</a></li>
+            <li><a href="virtual.html">Virtual</a></li>
         </ul>
         </div>
         </div>
