"my visuals" to "visual"

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	    <li>Websites</li>
             <li>E-commerce</li>
 <br>
-            <li><a href="visuals.html">My Visuals</a></li>
+            <li><a href="visuals.html">Visual</a></li>
             <li><a href="virtual.html">Virtual</a></li>
         </ul>
         </div>
