--- a/index.html
+++ b/index.html
@@ -32,10 +32,13 @@
         </div>
         <div class="sidebar-menu">
         <ul class="menu">
-            <li>Graphics</li>
+            <li>3D Graphics</li>
+            <li>Websites</li>
+            <!---<li>Graphics</li>
             <li>3D Modeling</li>
 	    <li>Websites</li>
             <li>E-commerce</li>
+            -->
 <br>
             <li><a href="visuals.html">Visual</a></li>
             <li><a href="virtual.html">Virtual</a></li>
