edit title(remove logo)

--- a/index.html
+++ b/index.html
@@ -28,17 +28,12 @@
 
         <div class="sidebar">
         <div class="logo">
-            <a href="index.html"><img src="https://raw.githack.com/awortham33/awortham33.github.io/master/media/cgi_dre-logo.png"></a>
+            <a href="index.html"><h1 class="title">CGI DRE</h1></a>
         </div>
         <div class="sidebar-menu">
         <ul class="menu">
             <li>3D Graphics</li>
             <li>Websites</li>
-            <!---<li>Graphics</li>
-            <li>3D Modeling</li>
-	    <li>Websites</li>
-            <li>E-commerce</li>
-            -->
 <br>
             <li><a href="visuals.html">Visual</a></li>
             <li><a href="virtual.html">Virtual</a></li>
