--- a/visuals.html
+++ b/visuals.html
@@ -24,7 +24,9 @@
 
         <div class="sidebar">
         <div class="logo">
-            <a href="index.html"><img src="https://raw.githack.com/awortham33/awortham33.github.io/master/media/cgi_dre-logo.png"></a>
+            <a href="index.html">
+                <h1 class="title">CGI DRE</h1>
+                </a>
         </div>
         <div class="sidebar-menu">
         <ul class="menu">
