--- a/virtual.html
+++ b/virtual.html
@@ -23,7 +23,7 @@
 		
         <div class="sidebar" id="virtual">
             <div class="logo">
-                <a href="index.html"><img src="https://raw.githack.com/awortham33/awortham33.github.io/master/media/cgi_dre-logo.png"></a>
+                <a href="index.html"><h1 class="title">CGI DRE</h1></a>
             </div>
             <div class="sidebar-menu">
                 <ul class="menu">
