update info text

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ DESIGNED AND CODED BY:: ANDRE WORTHAM
     
     
     <div class="footer">
-    <h5>Andre Wortham is a visual graphics designer based in San Diego, CA.</h5>
+    <h5>Andre Wortham is a Visual Graphics Artist based in Southern California.</h5>
     <a href="mailto:hello@andrewortham.com">Contact</a>
     </div>
 </body>
