--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ DESIGNED AND CODED BY:: ANDRE WORTHAM
         <div class="row">
             <div class="links">
                 <ul class="link1">
-                    <li><a href="andrewortham.com">Andre Wortham</a></li>
+                    <li><a href="index.html">Andre Wortham</a></li>
 
                 </ul>
             </div>
@@ -33,7 +33,7 @@ DESIGNED AND CODED BY:: ANDRE WORTHAM
             <div class="links">
                 <ul class="link2">
 
-                    <li><a href="mailto:hello@andrewortham.com">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                     
                 </ul>
             </div>
@@ -62,7 +62,7 @@ DESIGNED AND CODED BY:: ANDRE WORTHAM
     
     <div class="footer">
     <h5>Andre Wortham is a Visual Graphics Artist based in Southern California.</h5>
-    <a href="mailto:hello@andrewortham.com">Contact</a>
+    <a href="contact.html">Contact</a>
     </div>
 </body>
 </html>
