update contact page

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ DESIGNED AND CODED BY:: ANDRE WORTHAM
             <div class="links">
                 <ul class="link2">
 
+                    <li><a href="index.html" style="color:#fff;">Work</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     
                 </ul>
