--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,8 @@ DESIGNED AND CODED BY:: ANDRE WORTHAM
             <div class="links">
                 <ul class="link2">
 
-                    <li><a href="mailto:hello@andrewortham.com">Contact</a></li>
+                    <li><a href="index.html" >Work</a></li>
+                    <li><a href="contact.html" style="color:#fff;">Contact</a></li>
                     
                 </ul>
             </div>
