--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ DESIGNED AND CODED BY:: ANDRE WORTHAM
                 <ul class="link2">
 
                     <li><a href="index.html" style="color:#fff;">Work</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="mailto:andre@andrewortham.com">Contact</a></li>
                     
                 </ul>
             </div>
@@ -63,7 +63,7 @@ DESIGNED AND CODED BY:: ANDRE WORTHAM
     
     <div class="footer">
     <h5>Andre Wortham is a Visual Graphics Artist based in Southern California.</h5>
-    <a href="contact.html">Contact</a>
+        <a href="mailto:andre@andrewortham.com" class="footer-contact">Contact Me</a>
     </div>
 </body>
 </html>
