update  link font weight

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ DESIGNED AND CODED BY:: ANDRE WORTHAM
     
     <div class="footer">
     <h5>Andre Wortham is a Visual Graphics Artist based in Southern California.</h5>
-        <a href="mailto:andre@andrewortham.com" class="footer-contact">Contact Me</a>
+        <a href="mailto:andre@andrewortham.com">Contact Me</a>
     </div>
 </body>
 </html>
