--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Andre - Visual Graphics</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="#">
+    <link rel="icon" type="image/png" href="./assets/favicon.jpg">
     <link rel="stylesheet" href="bundle.css">
     
     <!--
