--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ DESIGNED AND CODED BY:: ANDRE WORTHAM
     
     <div class="footer">
     <h5>Andre Wortham is a Visual Graphics Artist based in Southern California.</h5>
-        <a href="https://www.instagram.com/andre.unlimited"><img class="instagram-icon" src="assets/instagram.svg"></a>
+        <a href="https://www.instagram.com/andre.unlimited" target="_blank"><img class="instagram-icon" src="assets/instagram.svg"></a>
         <a href="mailto:andre@andrewortham.com"><img class="icon" src="assets/mail.svg"></a>
         
     </div>
