add portfolio pieces

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@ DESIGNED AND CODED BY:: ANDRE WORTHAM
             <li><img src="./assets/2-1.jpg"></li>
             <li><img src="./assets/2-2.jpg"></li>
             <li><img src="./assets/2-3.jpg"></li>
+            <li><a href="https://www.andreunlimited.us/susboy" target="_blank"><img src="./assets/3-1.jpg"></a></li>
+            <li><img src="./assets/3-2.jpg"></li>
+            <li><img src="./assets/3-3.jpg"></li>
         </ul>
     </div>
 
