--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ DESIGNED AND CODED BY:: ANDRE WORTHAM
         <div class="row">
             <div class="links">
                 <ul class="link1">
-                    <li><a href="index.html">Andre Wortham</a></li>
+                    <li><a href="index.html">Andre</a></li>
 
                 </ul>
             </div>
